--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,16 @@
         android:theme="@style/Theme.DemoNavigationDrawer"
         tools:targetApi="31">
         <activity
+            android:name=".DemoNavDrawer2"
+            android:exported="false" />
+        <activity
             android:name=".DemoNavDrawer1"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="false" />
         <activity
-            android:name=".DemoNavDrawer2"
+            android:name=".DemoNavDrawer3"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
