--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.DemoNavigationDrawer"
         tools:targetApi="31">
         <activity
+            android:name=".DemoCT2"
+            android:exported="false" />
+        <activity
             android:name=".DemoNavDrawer4"
             android:exported="false" />
         <activity
